--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@
     <script type="text/javascript">
         initModel("js/waifu-tips.json")
     </script>
+    <script src="js/music.json"></script>
     <script src="js/music.js"></script>
 </body>
 </html>
