--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
     <script type="text/javascript">
         initModel("js/waifu-tips.json")
     </script>
-    <script src="js/music_data.js"></script>
+    <script src="https://jellyrain.gitee.io/love-game-back/music_data.js"></script>
     <script src="js/music.js"></script>
 </body>
 </html>
