--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="box">
             <a href="announcement.html" class="box1"><samp>最新公告</samp></a>
             <a href="main.html" class="box2"><samp>进入首页</samp></a>
-            <a href="#" class="box3"><samp>进入论坛</samp></a>
-            <a href="#" class="box4"><samp>登陆账号</samp></a>
-            <a href="#" class="box5"><samp>支持站长</samp></a>
-            <a href="#" class="box6"><samp>联系站长</samp></a>
-            <a href="#" class="box7"><samp>友情链接</samp></a>
+            <a href="main2.html" class="box3"><samp>新版首页</samp></a>
+            <a href="login.html" class="box4"><samp>登陆账号</samp></a>
+            <a href="support.html" class="box5"><samp>支持站长</samp></a>
+            <a href="contact.html" class="box6"><samp>联系站长</samp></a>
+            <a href="connect.html" class="box7"><samp>友情链接</samp></a>
         </div>
     </div>
 </body>
