--- a/main.html
+++ b/main.html
@@ -36,9 +36,130 @@
             <div id="volume_currentProgress"></div>
         </div>
     </div>
-    <div class="main"></div>
-    <div class="bottom"></div>
-
+    <hr>
+    <div class="main">
+        <div class="browse">
+            <h1>浏览</h1>
+            <hr>
+            <div class="browse_boxov">
+                <div class="browse_boxo">
+                    <div class="browse_box">
+                        <h4>冰娃与火娃</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/冰娃与火娃.jpg" onclick="game_go()">
+                    </div>
+                    <div class="browse_box">
+                        <h4>反重力小怪</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/反重力小怪.jpg" onclick="game_go()">
+                    </div>
+                    <div class="browse_box">
+                        <h4>绿衣忍者跑酷</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/绿衣忍者跑酷.jpg" onclick="game_go()">
+                    </div>
+                    <div class="browse_box">
+                        <h4>幽灵小猫历险记</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/幽灵小猫历险记.jpg" onclick="game_go()">
+                    </div>
+                </div>
+                <div class="browse_boxo">
+                    <div class="browse_box">
+                        <h4>南瓜人向前冲</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/南瓜人向前冲.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>杰特曼的飞行</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/杰特曼的飞行.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>外星猎手</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/外星猎手.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>外太空逃脱2</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/外太空逃脱2.jpg" >
+                    </div>
+                </div>
+                <div class="browse_boxo">
+                    <div class="browse_box">
+                        <h4>冰娃与火娃</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/冰娃与火娃.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>反重力小怪</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/反重力小怪.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>绿衣忍者跑酷</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/绿衣忍者跑酷.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>幽灵小猫历险记</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/幽灵小猫历险记.jpg" >
+                    </div>
+                </div>
+                <div class="browse_boxo">
+                    <div class="browse_box">
+                        <h4>南瓜人向前冲</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/南瓜人向前冲.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>杰特曼的飞行</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/杰特曼的飞行.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>外星猎手</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/外星猎手.jpg" >
+                    </div>
+                    <div class="browse_box">
+                        <h4>外太空逃脱2</h4>
+                        <img src="https://jellyrain.gitee.io/love-game-back/image/外太空逃脱2.jpg" >
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="classification">
+            <h1>分类</h1>
+            <hr>
+            <div class="classification_boxo">
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/冰娃与火娃.jpg" alt="">
+                    冒险
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/南瓜人向前冲.jpg" alt="">
+                    植物
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/反重力小怪.jpg" alt="">
+                    重力
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/外太空逃脱2.jpg" alt="">
+                    太空
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/外星猎手.jpg" alt="">
+                    太空
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/幽灵小猫历险记.jpg" alt="">
+                    探索
+                </div>
+                <div class="classification_box">
+                    <img src="https://jellyrain.gitee.io/love-game-back/image/绿衣忍者跑酷.jpg" alt="">
+                    动作
+                </div>
+            </div>
+        </div>
+        <div class="game" id="game">
+            <iframe src="http://flash.7k7k.com/cms/cms10/20140922/1554327526/13/game.html" frameborder="0"></iframe>
+            <i class="fa fa-close fa-3x" onclick="game_end()"></i>
+        </div>
+    </div>
+    <div class="bottom">
+        <hr>
+        <br>
+        © 2014-2020 jellyrain .Powered by WordPress. Theme By jellyrain | 服务器状态 | Donate | 站点地图
+    </div>
     <div class="waifu">
         <div class="waifu-tips"></div>
         <canvas id="live2d" class="live2d"></canvas>
@@ -46,12 +167,14 @@
             <span class="fui-user"></span>
         </div>
     </div>
+    
     <script src="js/waifu-tips.js"></script>
     <script src="js/live2d.js"></script>
     <script type="text/javascript">
         initModel("js/waifu-tips.json")
     </script>
-    <script src="https://jellyrain.gitee.io/love-game-back/music_data.js"></script>
+    <script src="https://jellyrain.gitee.io/love-game-music/music_data.js"></script>
     <script src="js/music.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
